:wrench: Fix lag on Safari by resolving window.matchMedia Listener

--- a/components/blog/code/code.styl
+++ b/components/blog/code/code.styl
@@ -1,4 +1,5 @@
 .standalone-code
+    position relative
     display block
     color var(--code-content)
     font-size 18px
@@ -12,7 +13,7 @@
     overflow-y hidden
 
     &.-highlighted 
-        & ~ .standalone-code
+        & + .standalone-code
             display none
 
     & > .token-line:last-child
